Repaired the nav page from extra spaces between website catalog's items

--- a/page-dev/dev/stylus/common.styl
+++ b/page-dev/dev/stylus/common.styl
@@ -34,11 +34,14 @@ mainFooterLayoutWidth = 60%
 	padding 0
 	list-style none
 	
+	font-size 0
+	
 .website-catalog__item
 	padding 0.5em
 	display inline-block
 	width 30%
 	
+	font-size small
 	border 1px solid grey
 	background-color #D8D8D8 
 
